--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header{
 .logo {
     height: 70px;
     width: 64px;
-    background-color: lightgray;
+    background-color: rgb(127, 122, 122);
   
 }
 .menu ul{
@@ -39,7 +39,15 @@ header{
 }
 main{
     flex-grow: 1;
-    background-color: plum;
+    background-color: rgb(151, 148, 151);
+}
+.conteudo{
+    width: 50%;
+    background-color: tomato;
+}
+.destaque{
+    width: 50%;
+    background-color: lightgray;
 }
 footer{
     height: 100px;
